syntax = "proto3";

option csharp_namespace = "GrpcService_Test.Protos";

import "google/api/annotations.proto";


service Customer {
	/// <summary>
	/// Gets searched customer.
	/// </summary>
	/// <param name="userId">The unique identifier for this person.</param>
	/// <returns>A customer</returns>
	rpc GetCustomerInfo (CustomerLookupRequest) returns (CustomerGrpcModel) {
		option (google.api.http) = {
			get: "/api/v1/customer/{userId}"
		};
	}

	/// <summary>
	/// Gets new customers as stream.
	/// </summary>
	/// <returns>customers</returns>
	rpc GetNewCustomers (NewCustomerRequest) returns (stream CustomerGrpcModel) {
	}

	/// <summary>
	/// Gets new customers as repeated.
	/// </summary>
	/// <returns>customers</returns>
	rpc ListNewCustomers (ListCustomerRequest) returns (ListCustomerReply) {
		option (google.api.http) = {
			get: "/api/v1/customer/listcustomers"
		};
	}

	/// <summary>
	/// create a new customer.
	/// </summary>
	/// <param name="customer">the customer Model</param>
	/// <returns>new customer</returns>
	rpc CreateCustomer (CreateCustomerRequest) returns (CustomerGrpcModel) {
		option (google.api.http) = {
			post: "/api/v1/customer/newcustomer"
			body: "customer"
		};
	}

	/// <summary>
	/// Gets searched customer.
	/// </summary>
	/// <param name="userId">The unique identifier for this person.</param>
	/// <param name="age">The age this person.</param>
	/// <returns>A list of customers</returns>
	rpc GetCustomerNames (CustomerLookupNameRequest) returns (ListCustomerNamesReply) {
		option (google.api.http) = {
			get: "/api/v1/GetFirstNames/{age}"
		};
	}
}

message NewCustomerRequest {
}

message ListCustomerRequest{
}

message CustomerLookupRequest {
	int32 userId = 1;
}

message ListCustomerReply {
	repeated CustomerGrpcModel customers = 1;
}

message CustomerGrpcModel {
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age = 5;
}

message CreateCustomerRequest {
	CustomerGrpcModel customer = 1;
}

message CustomerLookupNameRequest {
	int32 age = 1;
}

message ListCustomerNamesReply {
	repeated string customerNames = 1;
}